# BrailleGo

./: .cproject  .gitignore  .mxproject  .project  BrailleGo.ioc  CMakeLists.txt  CMakeLists_template.txt  Kernel Boot.mmd  Mutex Priority.mmd  Yield SVC Call.mmd
BSP/: BspSysTick.h  CMakeLists.txt
BSP/stm32f103/: BspHwInit.c  BspUart.c  stm32f1xx_hal_msp.c  syscalls.c
BSP/stm32f103/Inc/: BspPinNo.h
Core/: CMakeLists.txt
Core/Inc/: mnist_model.h  mnist_weights.h  usertask.h
Core/Src/: main.c  mnist_model.c  mnist_weights.c  stm32f1xx_it.c  syscalls.c  usertask.c
Drivers/: CMakeLists.txt
RTOS/: CMakeLists.txt
RTOS/BSP/: BspHwInit.h  BspUart.h
RTOS/BSP/stm32f103/: BspSysTick.c  BspUart.c  syscalls.c  sysmem.c
RTOS/BSP/stm32f103/Inc/: BspMemoryMap.h
RTOS/bsp/: BspMemoryMap.h  BspSysTick.h  BspUart.h
RTOS/bsp/stm32f103/: BspSysTick.c  BspUart.c  MemoryMap.h
RTOS/kernel/: MemoryMap.h  event.c  event.h  kernel.c  kernel.h  msg.c  msg.h  statem.c  statem.h  svc.h  synch.h  task.c  task.h  taskq.c  taskq.h  timer.c  types.h
RTOS/kernel/include/: Kernel.h  Kernel.hpp  kernel.h
RTOS/kernel/internal/: Mutex.h  Mutex.hpp  PriorityQueue.hpp  Semaphore.h  Semaphore.hpp  SyncObjs.hpp  Task.hpp  TaskManager.h  TaskManager.hpp  TaskQ.h  Types.h  event.h  msg.h  statem.h  task.h  taskq.h  timer.h  types.h
RTOS/kernel/src/: Kernel.c  Kernel.cpp  Mutex.cpp  PriorityQueue.cpp  Semaphore.cpp  SyncObjs.cpp  SysCall.cpp  Task.cpp  TaskManager.cpp  TaskQ.c  kernel.c  msg.c  statem.c  task.c  task.cpp  taskq.c
RTOS/kernel/uapi/: fcntl.c  sched.c  signal.c  stat.c  times.c  unistd.c  wait.c
RTOS/lib/: deblib.c  devio.c  devio.h  devlib.c  devlib.h  stdio.c  stdio.h  stdlib.h  switch.h  syscalls.c  sysmem.c
RTOS/port/: PortCore.h  PortHandler.h  PortTask.h  arch.h  handler.h  switch.h
RTOS/port/cortex-m3/: PortContext.h  PortCore.c  PortHandler.c  PortTask.c  arch.c  context.h  handler.c  switch.c
include/: MemoryMap.h  stdarg.h
kernel/: event.c  event.h  kernel.c  kernel.h  msg.h  synch.c  task.c  task.h
lib/: armcpu.c  stdlib.c  stdlib.h  switch.c
